# FRC-2025

./: .gitattributes  .gitignore  WPILib-License.md  build.gradle  requirements.txt
.wpilib/: wpilib_preferences.json
autogen/: generate-auto.py
dashboards/: CompetitionBoard.html  Testboard.html  cam7testboard.html
tofparse/: requirements.txt  tofparse.py  tofparse2.py
tofparse/output/: akit_25-02-21_16-49-41.toml  akit_25-02-21_16-49-41_1.csv  akit_25-02-21_16-49-41_2.csv  akit_25-02-21_16-49-41_3.csv  akit_25-02-21_17-15-39.toml  akit_25-02-21_17-15-39_1.csv  akit_25-02-21_17-25-24.toml  akit_25-02-21_17-25-24_1.csv  akit_25-02-21_17-34-28.toml  akit_25-02-21_17-34-28_1.csv  akit_25-02-21_17-40-43.toml  akit_25-02-21_17-40-43_1.csv  akit_25-02-21_17-40-43_2.csv  (+50 more)
vision/: .gitignore  Calibration.md  Cameras.md  Notes.md  cal_cam.py  cam.service  cap1.py  cap10.py  cap11.py  cap2.py  cap3.py  cap4.py  cap5.py  cap7.py  cap8.py  corner_detector.py  corner_detector.test.py  corner_detector_test.py  corners.py  cv2test.py  dash1.json  fake_VL53L1x.py  field-test.py  keys.py  lesstof.sh  log.py  log3.py  nt-test.py  ntpubtest.py  nttime.py  nttime.service  pyproject.toml  reefcalc.py  requirements.txt  rioback.py  seltof.sh  showtof.sh  superman.service  tailtof.sh  test.py  (+6 more)
vision/_tof-interrupt-rs/: Cargo.toml  flake.nix  pyproject.toml  test.py
vision/_tof-interrupt-rs/src/: interrupt.rs  lib.rs
vision/tof-rs/: Cargo.toml  interrupt.py  sensor_example.py  test.py
vision/tof-rs/src/: lib.rs  pin_setup.rs  sensor.rs  sensor_chooser.rs  set_pins.rs  types.rs
(+199 files in other folders)
