[package]
name = "vl53l1x-rs"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "vl53l1x"


[dependencies]
linux-embedded-hal = "0.3.2"
embedded-hal = "0.2.7"
pyo3 = { version = "0.19", features = ["extension-module"] }
vl53l1x-uld = "2.0.1"
gpiod = "0.3.0"
eventfd = "0.2.0"
libc = "0.2.170"
thread-priority = "1.2.0"
# vl53l1x-uld = { path = "../vl53l1x-uld" }
