[package]
name = "vl53l1x-rs"
version = "0.3.0"
authors = ["Team 8089 Coding Team <team8089@rockway.ca>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "vl53l1x"


[dependencies]
linux-embedded-hal = "0.3.2"
embedded-hal = "0.2.7"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
gpiod = "0.3.0"
#eventfd = "0.2.0"
libc = "0.2.170"
thread-priority = "1.2.0"
crossbeam-channel = "0.5.14"
nix = { version = "0.29.0", features = ["time"] }
vl53l1x-uld = "2.0.1"
#vl53l1x-uld = { path = "../vl53l1x-rs" }
